x-icon+some icons

--- a/src/scss/blocks/_discover.scss
+++ b/src/scss/blocks/_discover.scss
@@ -28,7 +28,7 @@
     left: 0;
     width: 268px;
     height: 24px;
-    background-image: url("./../../img/icons/underline.svg");
+    background-image: url("./img/icons/underline.svg");
   }
 
   // .discover__text
@@ -74,7 +74,7 @@
       position: absolute;
       top: 0;
       left: 0;
-      background-image: url("./../../img/icons/calendar-2.svg");
+      background-image: url("./img/icons/calendar-2.svg");
       width: 24px;
       height: 24px;
     }
@@ -95,7 +95,7 @@
       position: absolute;
       top: 0;
       left: 0;
-      background-image: url("./../../img/icons/location_map.svg");
+      background-image: url("./img/icons/location_map.svg");
       width: 24px;
       height: 24px;
     }
