--- a/src/scss/blocks/_feetback.scss
+++ b/src/scss/blocks/_feetback.scss
@@ -6,6 +6,14 @@
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 32px;
+    @media (max-width: 768px) {
+      display: flex;
+      justify-content: space-between;
+    }
+
+    @media (max-width: 425px) {
+      display: flex;
+    }
   }
 
   // .feetback__col
@@ -21,87 +29,138 @@
     &:nth-child(3) {
       padding-top: 50px;
     }
+    @media (max-width: 425px) {
+      animation: none;
+      //animation: slidemobile 20s linear infinite;
+
+      &:nth-child(2),
+      &:nth-child(3) {
+        display: none;
+      }
+    }
+    @media (max-width: 580px) {
+      animation: none;
+      //animation: slidemobile 20s linear infinite;
+
+      &:nth-child(2),
+      &:nth-child(3) {
+        display: none;
+      }
+    }
+    @media (max-width: 768px) {
+      animation: none;
+      display: flex;
+      flex-wrap: wrap;
+
+      &:nth-child(2) {
+        padding-top: 0;
+      }
+      &:nth-child(3) {
+        display: none;
+      }
+    }
   }
-}
 
-.card-review {
-  display: flex;
-  flex-direction: column;
-  gap: 32px;
-  box-shadow: 0px 4px 10px 0px rgba(23, 28, 31, 0.23);
-  background: rgb(255, 255, 255);
-  padding: 32px;
-  border-radius: 8px;
-
-  &__text {
-    font-size: 16px;
-    font-weight: 450;
-    line-height: 150%;
-    color: #909090;
-  }
-
-  &__rate {
+  .card-review {
     display: flex;
-    gap: 4px;
-  }
+    flex-direction: column;
+    gap: 32px;
+    box-shadow: 0px 4px 10px 0px rgba(23, 28, 31, 0.23);
+    background: rgb(255, 255, 255);
+    padding: 32px;
+    border-radius: 8px;
 
-  // .card-review__autor
+    &__text {
+      font-size: 16px;
+      font-weight: 450;
+      line-height: 150%;
+      color: #909090;
+    }
 
-  &__autor {
-    display: flex;
-    gap: 16px;
-    align-items: center;
-  }
+    &__rate {
+      display: flex;
+      gap: 4px;
+    }
 
-  // .card-review__autor-img
+    // .card-review__autor
 
-  &__autor-img {
-    border-radius: 100px;
-  }
+    &__autor {
+      display: flex;
+      gap: 16px;
+      align-items: center;
+    }
 
-  // .card-review__autor-descr
+    // .card-review__autor-img
 
-  &__autor-descr {
-  }
+    &__autor-img {
+      border-radius: 100px;
+    }
 
-  // .card-review__autor-name
+    // .card-review__autor-descr
 
-  &__autor-name {
-    font-size: 16px;
-    font-weight: 500;
-    line-height: 150%;
-  }
+    // .card-review__autor-name
 
-  // .card-review__autor-role
+    &__autor-name {
+      font-size: 16px;
+      font-weight: 500;
+      line-height: 150%;
+    }
 
-  &__autor-role {
-    font-size: 16px;
-    font-weight: 450;
-    line-height: 150%;
-    color: #909090;
+    // .card-review__autor-role
+
+    &__autor-role {
+      font-size: 16px;
+      font-weight: 450;
+      line-height: 150%;
+      color: #909090;
+    }
   }
-}
-@keyframes slideUp {
-  0% {
-    transform: translateY(0%);
+  @keyframes slideUp {
+    0% {
+      transform: translateY(0%);
+    }
+    95% {
+      transform: translateY(-50%);
+      opacity: 1;
+      filter: blur(0px);
+    }
+    97% {
+      opacity: 0;
+      filter: blur(10px);
+    }
+    98% {
+      transform: translateY(0%);
+      opacity: 0;
+      filter: blur(10px);
+    }
+    100% {
+      transform: translateY(0%);
+      opacity: 1;
+      filter: blur(0px);
+    }
   }
-  95% {
-    transform: translateY(-50%);
-    opacity: 1;
-    filter: blur(0px);
-  }
-  97% {
-    opacity: 0;
-    filter: blur(10px);
-  }
-  98% {
-    transform: translateY(0%);
-    opacity: 0;
-    filter: blur(10px);
-  }
-  100% {
-    transform: translateY(0%);
-    opacity: 1;
-    filter: blur(0px);
+  @keyframes slidemobile {
+    0% {
+      transform: translateX(0%);
+    }
+    95% {
+      transform: translateX(-50%);
+      opacity: 1;
+      filter: blur(0px);
+    }
+    97% {
+      opacity: 0;
+      filter: blur(10px);
+    }
+    98% {
+      transform: translateX(0%);
+      opacity: 0;
+      filter: blur(10px);
+    }
+    100% {
+      transform: translateX(0%);
+      opacity: 1;
+      filter: blur(0px);
+    }
   }
 }
