--- a/src/scss/blocks/_logos.scss
+++ b/src/scss/blocks/_logos.scss
@@ -1,18 +1,27 @@
 .logos {
   // .logos__title
   margin-bottom: 60px;
+  @media (max-width: 1023px) {
+    margin-bottom: 30px;
+  }
   &__items {
     display: flex;
     justify-content: space-between;
     padding: 60px 0;
     align-items: center;
     text-align: center;
+    @media (max-width: 1023px) {
+      flex-direction: column;
+      padding-top: 30px;
+      gap: 30px;
+    }
   }
   &__title {
     color: #9e9e9e;
     font-size: 24px;
     font-weight: 500;
     line-height: 140%;
+    padding-right: 20px;
   }
 
   // .logos__content
@@ -21,5 +30,9 @@
     display: flex;
     justify-content: space-between;
     gap: 32px;
+    flex-wrap: wrap;
+    @media (max-width: 1024px) {
+      justify-content: center;
+    }
   }
 }
