--- a/src/scss/blocks/_subscribe.scss
+++ b/src/scss/blocks/_subscribe.scss
@@ -3,6 +3,9 @@
 
   padding: 80px 0;
   overflow: hidden;
+  @media (max-width: 768px) {
+    margin-top: 30px;
+  }
 
   // .subscribe__content
   &__title {
@@ -10,6 +13,11 @@
     font-weight: 500;
     line-height: 35px;
     color: #fff;
+    @media (max-width: 768px) {
+      font-size: 20px;
+      line-height: 15px;
+      z-index: 2;
+    }
   }
   &__text {
     font-size: 20px;
@@ -17,6 +25,10 @@
     line-height: 25px;
     color: #fff;
     padding-top: 4px;
+    @media (max-width: 768px) {
+      font-size: 14px;
+      z-index: 2;
+    }
   }
   &__content {
     display: flex;
@@ -31,10 +43,30 @@
       width: 236.67px;
       height: 273.33px;
       left: -80px;
-      background-image: url("./img/subscribe-img.svg");
+      background-image: url("../../img/subscribe-img.svg");
+    }
+    @media (max-width: 600px) {
+      flex-direction: column;
+      text-align: center;
+      justify-content: center;
+      width: 100%;
+      padding: 0;
+      &::before {
+        display: none;
+      }
+    }
+  }
+  @media (max-width: 425px) {
+    text-align: center;
+    justify-content: center;
+    width: 100%;
+    padding: 70px 0;
+    &::before {
+      display: none;
     }
   }
 }
+
 .subscribe-form {
   &__input {
     padding: 12px;
@@ -58,6 +90,9 @@
     margin-left: 12px;
     &:hover {
       opacity: 0.8;
+    }
+    @media (max-width: 1024px) {
+      margin-top: 10px;
     }
   }
 }
